--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 2,
-"cancellable": true,
-"size": "13.64MB",
-"url": "http://test.com" ,
-"Message": "https://lol.com"
+"versionCode": 1,
+"cancellable": false,
+"size": "",
+"url": "" ,
+"Message": ""
 }
