--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+github: [epicstudios856, ahmedbarakat2007]
 patreon: # Replace with a single Patreon username
 custom: https://www.facebook.com/856NoureldeenElsayed # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
