--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 1.1,
+"versionCode": 1.2,
 "cancellable": false,
-"size": "18.2MB",
-"url": "https://github.com/epicstudios856/Vectras-windows-emulator/raw/main/releases/apk/1.1b-2023-11-15.apk" ,
+"size": "24.4MB",
+"url": "https://github.com/epicstudios856/Vectras-VM-Android/releases/download/1.2b/vectras-v1.2b-231117-armeabi-v7a.apk" ,
 "Message": "-minor changes\n-android 13 no permissions fix"
 }
