--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 1.3,
+"versionCode": 6,
 "cancellable": true,
 "size": "24.4MB",
-"url": "gg" ,
-"Message": "wait"
+"url": "https://vectras.netlify.app/download" ,
+"Message": "new update!!"
 }
