--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 5,
+"versionCode": 6,
 "cancellable": false,
-"size": "19.07MB",
+"size": "35MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": "new update!!"
+"Message": "all problems are fixed!!"
 }
