--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -3,5 +3,5 @@
 "cancellable": true,
 "size": "35MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": "all problems are fixed!!"
+"Message": "all problems are fixed!"
 }
