--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 6,
+"versionCode": 7,
 "cancellable": true,
 "size": "35MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": "all problems are fixed!"
+"Message": "*SDL<b/>*AVX<b/>*TB CACHE<b/>*USB TABLET<b/>*CUSTOM PARAMS<b/>*improved ui and controls<b/>*fixed some bugs"
 }
