--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -3,5 +3,5 @@
 "cancellable": true,
 "size": "35MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": "*SDL<b/>*AVX<b/>*TB CACHE<b/>*USB TABLET<b/>*CUSTOM PARAMS<b/>*improved ui and controls<b/>*fixed some bugs"
+"Message": "*SDL<b>*AVX<b/>*TB CACHE<b>*USB TABLET<b>*CUSTOM PARAMS<b>*improved ui and controls<b>*fixed some bugs"
 }
