--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 9,
+"versionCode": 10,
 "cancellable": false,
 "size": "35MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": " * CUSTOM ROM<br> * CONTROL UI IMPROVED<br> * FIX HOME UI<br> * CUSTOM SETTINGS FOR ANY ROM<br> * ADD LANGUAGES (RU, AR)<br> * UPDATE QEMU VGA BIOS (VMWARE, VIRTIO)<br> * IMPORT ISO FILES<br> * IMPORT SHARED FOLDER FILES (IN APPS & GAMES PAGE)<br> * ADDED SOUNDCARDS IN SDL<br> * INSTALL ROMS PAGE FIXED"
+"Message": "CUSTOM ROM CVBI (IMPORT/EXPORT)<br> * MOVED DATA FOLDER TO Documents/VectrasVM<br> * IMPORT ISO FIXED<br> * DESKTOP CONTROLS<br> * UPDATE QEMU ASSETS<br> * CPU MODEL<br> * OFFLINE INSTALLATION (NEEDS LOGIN FOR FIRST TIME)<br> * MINOR CHANGES/FIXES<br> * MORE STABILITY<br> * ANDROID 13+ NOTIFICATION PERMISSION FIX"
 }
