--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,4 +2,4 @@
 
 github: [epicstudios856, ahmedbarakat2007]
 patreon: # Replace with a single Patreon username
-custom: https://www.facebook.com/856NoureldeenElsayed # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: [https://www.buymeacoffee.com/vectrasvm, https://www.facebook.com/856NoureldeenElsayed] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
