--- a/UpdateConfig.json
+++ b/UpdateConfig.json
@@ -1,7 +1,7 @@
 {
-"versionCode": 10,
+"versionCode": 12,
 "cancellable": false,
-"size": "35MB",
+"size": "33.6MB",
 "url": "https://vectras.netlify.app/download" ,
-"Message": "<font color='red'>BUILD 10</font><br> * CUSTOM ROM CVBI (IMPORT/EXPORT)<br> * IMPORT ISO FIXED<br> * DESKTOP CONTROLS<br> * UPDATE QEMU ASSETS<br> * CPU MODEL<br> * OFFLINE INSTALLATION (NEEDS LOGIN FOR FIRST TIME)<br> * MINOR CHANGES/FIXES<br> * MORE STABILITY<br> * ANDROID 14+ NOTIFICATION PERMISSION FIX"
+"Message": "<font color='red'>BUILD 12<br>VERSION 2.7</font><br> * DATA EXPLORER (just simple for now)<br> * IMPORT HDDS (QCOW2, IMG, VMDK, VHD, etc...)<br> * CONTROLER MODES<br>   - GAME MODE<br>   - DESKTOP MODE<br> * MORE IMPROVMENTS TO PERFORMANCE AND APP<br> * MINOR CHANGES/FIXES"
 }
